--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
     <nav class="wrapper">
         <ul>
-            <li>About</li>
-            <li>Downloads</li>
-            <li>Contact</li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Download</a></li>
+            <li><a href="#">Contact</a></li>
         </ul>
     </nav>
     <main>
