--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav class="wrapper">
         <ul>
             <li><a href="#">About</a></li>
-            <li><a href="#">Download</a></li>
+            <li><a href="https://www.instagram.com/8sqr_/"><i class="fab fa-instagram"></i>/a></li>
             <li><a href="#">Contact</a></li>
         </ul>
     </nav>
